--- a/login/templates/login/base.html
+++ b/login/templates/login/base.html
@@ -9,5 +9,10 @@
 </head>
 <body>
 	<h1>hello,world</h1>
+	<div class="progress">
+  <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+    <span class="sr-only">60% Complete</span>
+  </div>
+</div>
 </body>
 </html>
