修改默认字体

--- a/login/templates/login/index.html
+++ b/login/templates/login/index.html
@@ -23,6 +23,7 @@
 		body {
 			-webkit-user-select:none;
 			text-shadow:0 1px 0 rgba(0, 0, 0, .3);
+			font-family:"微软雅黑";
 		}
 		h1 {
 			color: white;
@@ -108,7 +109,7 @@
 						<abbr title="电话">P:</abbr> (0316) 8582426
 					</address>
 					<address>
-						<strong>邮件地址:</strong><a href="mailto:#">xls@xuels.com</a>
+						<strong>邮件地址:</strong><a href="mailto:#"e>xls@xuels.com</a>
 					</address>
 				</div>
 				<div class="col-md-2" id='weixin'>
