--- a/login/templates/login/index.html
+++ b/login/templates/login/index.html
@@ -131,16 +131,15 @@
 	</div>
 
 	<script type="text/javascript">
-		var huh = new Date(2014,11,19);
+		var huh = new Date(2014,11,1);
 		var duh = new Date();
 		var wha = huh.getTime()/1000 - duh.getTime()/1000;
-		var clock = $('.clock').FlipClock(3600*24*10,{
+		var clock = $('.clock').FlipClock(huh,{
 			clockFace: 'DailyCounter',
 			countdown: true
 		});
-
 	</script>
-		<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=您的密钥"></script>
+	<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=您的密钥"></script>
 	<script type="text/javascript">
 		// 百度地图API功能
 		var map = new BMap.Map("allmap");
