--- a/login/templates/login/base.html
+++ b/login/templates/login/base.html
@@ -14,5 +14,9 @@
     <span class="sr-only">60% Complete</span>
   </div>
 </div>
+<h1>{{local_time}}</h1>
+<script type='text/javascript'>
+	document.write(Date())
+</script>
 </body>
 </html>
