--- a/login/templates/login/index.html
+++ b/login/templates/login/index.html
@@ -131,13 +131,14 @@
 	</div>
 
 	<script type="text/javascript">
-		var huh = new Date(2014,11,1);
-		var duh = new Date();
-		var wha = huh.getTime()/1000 - duh.getTime()/1000;
-		var clock = $('.clock').FlipClock(huh,{
+		// var huh = new Date(2014,11,1);
+		// var duh = new Date();
+		// var wha = huh.getTime()/1000 - duh.getTime()/1000;
+		var clock = $('.clock').FlipClock({{delta}},{
 			clockFace: 'DailyCounter',
 			countdown: true
 		});
+
 	</script>
 	<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=您的密钥"></script>
 	<script type="text/javascript">
