修正抬头信息

--- a/login/templates/login/index.html
+++ b/login/templates/login/index.html
@@ -62,6 +62,7 @@
 		}
 		#dizhi {
 			margin-top: 35px;
+
 		}
 	</style>
 	<script src="{% static "js/flipclock.min.js" %}"></script>
@@ -70,14 +71,14 @@
 	<div class="count_time">
 		<div class="center_time">
 			<div class="row">
-				<div class="col-md-5 col-md-offset-1">
-					<h1>我们的网站还需要</h1>
+				<div class="col-md-8 col-md-offset-1">
+					<h1><strong style='font-size:70px;color:#428bca;'>薛律师</strong> 网在</h1>
 				</div>
-				<div class="col-md-8 col-md-offset-3">
+				<div class="col-md-5 col-md-offset-3">
 					<div class="clock" style="margin:2em;"></div>
 				</div>
-				<div class="col-md-3 col-md-offset-8">
-					<h1>就可以和大家见面了.</h1>
+				<div class="col-md-3" style="margin-top:40px;">
+					<h1>之后就要面世啦！！</h1>
 				</div>
 			</div>
 
@@ -85,7 +86,7 @@
 
 	</div>
 	<div class="center_timu">
-		<h1>当然你也可以在下面的地图上找到我们的家!</h1>
+		<h1>当然您也可以在下面的地图上找到我们的家!</h1>
 	</div>
 	<div class="center_ditu">
 		<div class="ditu">
@@ -105,7 +106,6 @@
 						</h3>
 						<br>
 						河北省香河县新华大街民族饭店东侧<br>
-						昌丰烟酒二层<br>
 						<abbr title="电话">P:</abbr> (0316) 8582426
 					</address>
 					<address>
@@ -115,13 +115,13 @@
 				<div class="col-md-2" id='weixin'>
 					<h3 style='text-align:center'>微信</h3>
 					<div id="img">
-						<img src="{% static "images/text.png" %}" style="width:200px;" alt="">	
+						<img src="{% static "images/text.png" %}" style="width:200px;border-radius: 5px;" alt="">	
 					</div>
 				</div>
 				<div class="col-md-2" id="weibo">
 					<h3 style='text-align:center'>微博</h3>
 					<div id="img">
-						<img src="{% static "images/text.png" %}" style="width:200px;" alt="">	
+						<img src="{% static "images/text.png" %}" style="width:200px;border-radius: 5px;" alt="">	
 					</div>
 				</div>
 
