修改浏览器兼容性问题

--- a/login/templates/login/index.html
+++ b/login/templates/login/index.html
@@ -84,7 +84,7 @@
 		<div class="center_time">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-1">
-					<h1><strong style='font-size:70px;color:#428bca;'>薛律师</strong> 网在a</h1>
+					<h1><strong style='font-size:70px;color:#428bca;'>薛律师</strong> 网在</h1>
 				</div>
 
 
