修改百度地图的key文件

--- a/login/templates/login/index.html
+++ b/login/templates/login/index.html
@@ -155,7 +155,7 @@
 			// alert(window_width)
 	};
 	</script>
-	<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=您的密钥"></script>
+	<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=lPSIG6jGG68OCGCc5mY9mGDr"></script>
 	<script type="text/javascript">
 
 
@@ -185,11 +185,6 @@ map.openInfoWindow(infoWindow, map.getCenter());      // 打开信息窗口
 	marker.addEventListener("click", function(){          
 		map.openInfoWindow(infoWindow,point); //开启信息窗口
 	});
-
-
-
-
-
 		map.enableScrollWheelZoom();   //启用滚轮放大缩小，默认禁用
 		map.enableContinuousZoom();    //启用地图惯性拖拽，默认禁用
 		map.addControl(new BMap.NavigationControl());        // 添加平移缩放控件
