修改api为1.5版本

--- a/login/templates/login/index.html
+++ b/login/templates/login/index.html
@@ -155,7 +155,8 @@
 			// alert(window_width)
 	};
 	</script>
-	<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=lPSIG6jGG68OCGCc5mY9mGDr"></script>
+	<script type="text/javascript" src="http://api.map.baidu.com/api?v=1.5&ak=lPSIG6jGG68OCGCc5mY9mGDr">
+	</script>
 	<script type="text/javascript">
 
 
